# superannotatestuff

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: instances.json  main.py
app/annotations/: Bloodborne1___objects.json  Bloodborne2___objects.json  Bloodborne3___objects.json
app/annotations_after/iincurso_application December 12 2022 05_31/: Bloodborne1___objects.json  Bloodborne2___objects.json  Bloodborne3___objects.json
app/annotations_after/iincurso_application December 12 2022 05_31/classes/: classes.json
app/annotations_after/incurso_application December 12 2022 03_49/: Bloodborne1___objects.json  Bloodborne2___objects.json  Bloodborne3___objects.json
app/annotations_after/incurso_application December 12 2022 03_49/classes/: classes.json
converter/: YOLO.txt  converter.py  example.json
