[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "autopep8>=2.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ReRubis", email = "slesarenkod@gmail.com"},
]
dependencies = [
    "superannotate>=4.4.7",
]
requires-python = ">=3.10"
license = {text = "MIT"}
